# thesis

./: .gitignore
annotation_tool/: Dockerfile  docker-compose.yml
annotation_tool_strands/: docker-compose.yml
code/: anom_detect.py  cloud_viewer.cpp  create_db.py  database  extract_data.py  gaussian_ex1.py  normal_ex0.py  normal_ex1.py
code/learn/: create_db.py  database  gaussian_ex0.py  get_mouse_features.py  normal_ex2.py
code/parse_xml/: Akshaya_Table_131023_Aft_seg.xml  gaussian_ex0.py  gmm_ex.py  learn.py  mouse_features.csv  normal_ex1.py  normal_ex2.py  parse_obj.py  xml_parser.py
code/pcl/convert_pcd_ascii_binary/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  convert_pcd_ascii_binary  convert_pcd_ascii_binary.cpp  final.xml
documentation/thesis_proposal/: plate_features.csv  thesis_proposal.aux  thesis_proposal.dvi  thesis_proposal.tex  thesis_proposal.toc
kinectfusion/: Dockerfile  docker-compose.yml  installOpenCV.sh
kth-3d-total/: index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D
kth-3d-total/Bad Files/: Nils_Table_131024_Eve_seg.xml  Yasemin_Table_131107_Mor_seg.xml
kth-3d-total/xml-annotated/: Akshaya_Table_131023_Eve_seg.xml  Akshaya_Table_131023_Mor_seg.xml  Akshaya_Table_131024_Eve_seg.xml  Akshaya_Table_131024_Mor_seg.xml  Akshaya_Table_131028_Aft_seg.xml  (+429 more)
pcl_grabber/: Dockerfile  bash_completion.sh  docker-compose.yml
roscore/: docker-compose.yml
rviz/: docker-compose.yml  ed.rviz
test/: Dockerfile  docker-compose.yml
(+54 files in other folders)
